--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/index.php",
+        "src": "/index.php",
         "use": "@vercel/php"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/api/index.php"  
+        "dest": "/index.php"  
       }
     ]
   }
